@startuml

package ptai-integration-service {
    class JenkinsClient
    note right: Init settings from @Values
    class PtaiClient
}

package generic-client-lib {
    package base {
        class Base
        note left: Constants, logging, JCE fix
        class BaseClient
        note right: URL, certificates, keys
        BaseClient -up-|> Base
    }
    package jenkins {
        class Client
        note right: Credentials, rerty settings
        Client -up-|> BaseClient
    }
    package ptaiserver {
        class ptaiserver.Client
        ptaiserver.Client -up-|> BaseClient
    }
}

JenkinsClient -up-|> Client
PtaiClient -up-|> ptaiserver.Client

@enduml